refactor GetUserPersonalData
